<resources>
    <string name="app_name">Keep-App</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="no_folder">no folder</string>
    <string name="card_content">《失控》成书于1994年，作者是《连线》杂志的创始主编凯文·凯利。这本书所记述的，是他对当时科技、社会和经济最前沿的一次漫游，以及借此所窥得的未来图景。</string>
    <string name="hint_title">Title</string>
    <string name="hint_content">Content</string>
    <string name="press_again_exit_app">再按一次退出程序</string>
    <string name="account">用户名:</string>
    <string name="password">密    码:</string>
    <string name="lastUpdate">修改日期</string>
    <string name="add_label">添加</string>
    <string name="tags">Tags</string>
    <string name="tv_logo">Stay before every beautiful thoughts</string>
    <string name="archive">Archive</string>
    <string name="entries">Note</string>
    <string name="action_change_folder">Change Color</string>
    <string name="action_add_picture">Add Picture</string>
    <string name="action_archive">Archive</string>
    <string name="color_picker">Color</string>
    <string name="score">Score : </string>
    <string name="action_share">Share</string>
    <string name="transition_book_img">transition_book_img</string>


    <string name="title_book">书籍</string>

    <string name="book_title_1">失控</string>
    <string name="book_description_1">作者: [美] 凯文·凯利 \n副标题: 全人类的最终命运和结局 \n出版年: 2010-12 \n页数: 707 \n定价: 88.00元 </string>

    <string name="book_title_2">黑客与画家</string>
    <string name="book_description_2">作者: [美] Paul Graham\n副标题: 硅谷创业之父Paul Graham文集\n出版年: 2011-4\n页数: 264\n定价: 49.00元</string>

    <string name="book_title_3">七周七语言</string>
    <string name="book_description_3">作者: Bruce A.Tate\n副标题: 理解多种编程范型\n出版年: 2012-5-8\n页数: 246\n定价: 59.00元</string>

</resources>
