<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">


        <EditText
            android:id="@+id/editTextTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:background="#00000000"
            android:hint="@string/hint_title"

            android:textSize="16sp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/editTextContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:background="#00000000"
            android:hint="@string/hint_content"
            android:textSize="16sp"/>

        <!--<android.support.design.widget.TextInputLayout-->
            <!--android:id="@+id/textInputEmail"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginTop="20dp">-->

            <!--<EditText-->
                <!--android:id="@+id/editTextTitle"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:hint="@string/hint_title"-->
                <!--android:inputType="textEmailAddress" />-->
        <!--</android.support.design.widget.TextInputLayout>-->

        <!--<android.support.design.widget.TextInputLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content">-->

            <!--<EditText-->
                <!--android:id="@+id/editTextContent"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_gravity="center_horizontal"-->
                <!--android:ems="10"-->
                <!--android:hint="@string/hint_content"-->
                <!--android:inputType="textMultiLine" />-->

        <!--</android.support.design.widget.TextInputLayout>-->

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/img"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/lastUpdate"
            android:id="@+id/lastUpdate"
            android:layout_gravity="right" />


    </LinearLayout>

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="20dp"
        app:layout_collapseMode="pin"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/btnAdd"
                android:src="@drawable/plus"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_gravity="right|center"/>

            <TextView
                android:id="@+id/tvUpdataTime"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <ImageView
                android:id="@+id/btn"
                android:src="@drawable/plus"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_gravity="right|center"/>

        </LinearLayout>

    </android.support.v7.widget.Toolbar>

</LinearLayout>

